--- a/app/views/home/_requester_dashboard.html.erb
+++ b/app/views/home/_requester_dashboard.html.erb
@@ -1,6 +1,6 @@
 <div class="panel"> 
 
-<h5> Hi, [user]!  </h5>
+<h5> Hi, <%="#{current_user.andrew_id}"%>!  </h5>
 <br /> 
 
 <button>Apply for a new key<% link_to new_user_key_path %></button>
@@ -17,8 +17,7 @@
   <tr>
     <td><%= link_to key.name, user_key_path(key) %></td>
     <td><%= key.value %></td>
-    <!-- add expiry date to approved keys-->
-    <!-- <td><= key.time_expired.to_formatted_s(:pretty)%></td> -->
+    <td><= key.time_expired ? key.time_expired.to_formatted_s(:pretty) : "N/A" %></td>
   </tr>
 <% end %>
 </table>
@@ -73,8 +72,7 @@ None
 <% @expired_keys.each do |key| %>
   <tr>
     <td><%= link_to key.name, user_key_path(key) %></td> 
-    <!-- add expiry date to approved keys-->
-    <!-- <td><= key.time_expired.to_formatted_s(:pretty)%></td> -->
+    <td><= key.time_expired ? key.time_expired.to_formatted_s(:pretty) : "N/A" %></td>
   </tr>
 <% end %>
 </table>
