--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,13 +1,20 @@
 <!DOCTYPE html>
 <html>
   <head>
+    <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title><%= content_for?(:title) ? yield(:title) : "ShinyMetal" %></title>
-    <meta name="description" content="<%= content_for?(:description) ? yield(:description) : "Shinymetal" %>">
-    <%= stylesheet_link_tag 'application', media: 'all', 'data-turbolinks-track' => true %>
-    <%# Modernizr is required for Zurb Foundation %>
-    <%= javascript_include_tag 'vendor/modernizr' %>
-    <%= javascript_include_tag 'application', 'data-turbolinks-track' => true %>
+
+    <title><%= content_for?(:title) ? "#{yield(:title)} - " : nil %>The Bridge API</title>
+    <meta name="description" content="<%= content_for?(:description) ? yield(:description) : 'The Bridge API' %>">
+    <meta name="description" content="<%= content_for?(:keywords) ? yield(:keywords) : 'cmu,bridgeapi,thebridge,api,stugov' %>">
+
+    <%= stylesheet_link_tag     'application',      'data-turbolinks-track' => true, media: 'all' %>
+    <%= javascript_include_tag  'application',      'data-turbolinks-track' => true %>
+    <%= javascript_include_tag  'vendor/modernizr', 'data-turbolinks-track' => true %>
+
+    <%= favicon_link_tag "favicon.ico" %>
+    <%= favicon_link_tag "favicon.ico", rel: "apple-touch-icon" %>
+
     <%= csrf_meta_tags %>
   </head>
   <body>
