--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,5 +1,5 @@
-<h1>Welcome to the ShinyMetal API</h1>
-<p> This API provides access to organization and event information at CMU from the Bridge. 
+<h1>Welcome to The Bridge API</h1>
+<p> This API provides access to organization and event information at CMU via The Bridge.
 
 <% if logged_in? %>
   <% if @current_user.role == "admin" %>
@@ -10,5 +10,5 @@
   <% end %>
 
 <% else %>
-Login to begin.  
+Login to begin.
 <% end %>
