--- a/app/assets/stylesheets/vars.scss
+++ b/app/assets/stylesheets/vars.scss
@@ -9,3 +9,13 @@ $light-blue: #7493AA;
 $green: #999933;
 $body: #686565;
 $body-dark: #222;
+
+$body-font-family: "Avenir Roman", "Helvetica", Helvetica, Arial, sans-serif;
+$body-bg: $secondary-dark;
+$body-font-color: #444;
+$heading-font-color: #444;
+$primary-color: #701;
+$secondary-color: #444;
+$info-color: #888;
+$alert-color: #c60f13;
+$success-color: #5da423;
