--- a/app/views/layouts/_navigation.html.erb
+++ b/app/views/layouts/_navigation.html.erb
@@ -3,7 +3,7 @@
   <ul class="title-area">
     <li class="toggle-topbar menu-icon"><a href="#">Menu</a></li>
     <li class="name">
-      <h1><%= link_to 'ShinyMetal', root_path %></h1></li>
+      <h1><%= link_to 'The Bridge API', root_path %></h1></li>
     <li class="toggle-topbar menu-icon"><a href="#"><span>Menu</span></a></li>
   </ul>
   <div class="top-bar-section">
