--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,8 +1,8 @@
 <h1>Welcome to the ShinyMetal API</h1>
-<p> This API provides access to organization and event information at CMU from the Bridge. 
+<p> This API provides access to organization and event information at CMU from the Bridge.
 
 <% if logged_in? %>
-  <% if @current_user.role == "admin" %>
+  <% if @current_user.is_admin? %>
    <%= render :partial => "admin_dashboard" %>
 
   <% else %>
@@ -10,5 +10,5 @@
   <% end %>
 
 <% else %>
-Login to begin.  
+Login to begin.
 <% end %>
