--- a/app/views/user_keys/show_partials/_list_of_comments.html.erb
+++ b/app/views/user_keys/show_partials/_list_of_comments.html.erb
@@ -8,7 +8,7 @@
       &nbsp;<%= comment.time_posted.to_formatted_s(:pretty) %>
       &nbsp;<%= "(private)" if comment.is_private %>
       <%= link_to "X", delete_comment_path(id: @user_key.id, comment_id: comment.id),
-          method: :patch, data: { confirm: 'Are you sure?'}, class: "small-button" %>
+          method: :patch, data: { confirm: 'Are you sure you want to delete this comment?'}, class: "small-button" %>
       <br />
       <p><%= comment.message %></p>
     </div>
