--- a/app/views/layouts/_navigation_links.html.erb
+++ b/app/views/layouts/_navigation_links.html.erb
@@ -1,9 +1,10 @@
-<!-- Needs better admin/nonadmin authentication for additional roles -->
+<!-- FIXME Needs better admin/nonadmin authentication for additional roles -->
 
-<% if logged_in? and @current_user.role == "admin" %>
   <ul class="left"> 
     <li class="divider"></li>
     
+    <!-- Begin admin login check-->
+    <% if logged_in? and (@current_user.role == "admin" or @current_user.is_approver) %>
     <li><%= link_to "Users", users_path %></li>
     
     <li class="has-dropdown"><%= link_to "User Keys", user_keys_path %>
@@ -14,19 +15,21 @@
     </li>
   
     <li class="has-form">
-    <div class="collapsed_row">
-      <%= form_tag users_path, method: 'get' do %>
-        <div class="search-param">
-          <%= text_field_tag :search, params[:search] %>
-        </div>
-        <div class="search-label">
-          <%= submit_tag "Find User", :name => nil, class: "search-button info postfix" %>
-        </div>
-      <% end %>
-    </div>
-    </li>
+      <div class="collapsed_row">
+        <%= form_tag users_path, method: 'get' do %>
+          <div class="search-param">
+            <%= text_field_tag :search, params[:search] %>
+          </div>
+          <div class="search-label">
+            <%= submit_tag "Find User", :name => nil, class: "search-button info postfix" %>
+          </div>
+        <% end %>
+      </div>
+    </li> 
+    <% elsif logged_in? %> <!--End admin login check, begin user login check-->
+      <li><%= link_to "Your API keys", user_keys_path %></li>
+    <% end %>
   </ul>
-<% end %>
 
 <ul class="right">
   <% if logged_in? %>
