--- a/app/views/user_keys/show_partials/_list_of_approvers.html.erb
+++ b/app/views/user_keys/show_partials/_list_of_approvers.html.erb
@@ -1,4 +1,4 @@
-<% unless @user_key.at_submit_stage? or @user_key.at_filter_stage? %>
+<% if @user_key.at_stage? :awaiting_confirmation or @user_key.at_stage? :confirmed %>
 
 	<p>
 	  <b><%= "Approvers who have approved this key" %></b><br />
@@ -9,7 +9,7 @@
 	  </ul>
 	</p>
     
-  <% if @user_key.confirmed? %>
+  <% if @user_key.at_stage? :confirmed %>
   
     <p>This key was approved by everyone.</p>
   
