--- a/app/views/user_keys/show_partials/_submit_buttons.html.erb
+++ b/app/views/user_keys/show_partials/_submit_buttons.html.erb
@@ -3,15 +3,15 @@
 
 <br />
 
-<% if @user_key.at_submit_stage? %>
+<% if @user_key.at_stage? :awaiting_submission %>
 
   <%= link_to 'Submit request', set_as_submitted_path(@user_key), method: :patch, class: "big-button" %> 
 
-<% elsif @user_key.at_filter_stage? %>
+<% elsif @user_key.at_stage? :awaiting_filters %>
 
   <%= link_to 'Share key with approvers', set_as_filtered_path(@user_key), method: :patch, class: "big-button" %> 
 
-<% elsif @user_key.at_confirm_stage? %>
+<% elsif @user_key.at_stage? :awaiting_confirmation %>
 
   <% if @user_key.approved_by_all? %>
     
@@ -45,7 +45,7 @@
   
   <% end %>
 
-<% else %>
+<% else %> <!-- Must be at_stage? :confirmed -->
 
 <p> This key was approved by everyone and has been confirmed.</p>
 
