--- a/app/views/user_keys/show_partials/_list_of_approvers.html.erb
+++ b/app/views/user_keys/show_partials/_list_of_approvers.html.erb
@@ -3,7 +3,7 @@
 	<p>
 	  <b><%= "Approvers who have approved this key" %></b><br />
 	  <ul>
-		<% for approver in @user_key.users %>
+		<% for approver in @user_key.approval_users %>
 		  <li><%= link_to approver.andrew_id, approver %></li>
 		<% end  %>
 	  </ul>
@@ -22,7 +22,7 @@
 	<p>
 	  <b><%= "Approvers who have not approved this key" %></b><br />
 	  <ul>
-		<% for approver in User.approvers - @user_key.users %>
+		<% for approver in User.approvers - @user_key.approval_users %>
 		  <li><%= link_to approver.andrew_id, @approver %></li>
 		<% end  %>
 	  </ul>
