Changed schema; dropped redundant time attributes, removed unnecessary is_approver, added active to user, changed some views, models, tests, and populate file accordingly

--- a/app/views/user_keys/show.html.erb
+++ b/app/views/user_keys/show.html.erb
@@ -73,7 +73,8 @@
   </p>
 <% end %>
 
-<% if @current_user.is_approver %>  
+<% if can? :read, :all %>  
+
     <%= render partial: 'user_keys/show_partials/list_of_filters' %>
 
     <%= render partial: 'user_keys/show_partials/list_of_organizations' %>
