Removed is_approver from user views, added active

--- a/app/views/users/_form.html.erb
+++ b/app/views/users/_form.html.erb
@@ -29,8 +29,8 @@
     </div>
   </div>
   <div class="collapsed_row">
-    <%= f.check_box :is_approver %>
-    <%= f.label :is_approver %>
+    <%= f.check_box :active %>
+    <%= f.label :active %>
   </div>
   
   <br/>
