--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -11,7 +11,7 @@
     <tr>
       <th>Andrew</th>
       <th>Role</th>
-      <th>Approver?</th>
+      <th>Active?</th>
       <th colspan="3"></th>
     </tr>
   </thead>
