--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -9,8 +9,8 @@
 </p>
 
 <p>
-  <strong>Is approver:</strong>
-  <% if @user.is_approver %>
+  <strong>Active:</strong>
+  <% if @user.active %>
     <span class="success label">Yes</span>
   <% else %>
     <span class="secondary label">No</span>
