--- a/app/views/user_keys/show_partials/_list_of_comments.html.erb
+++ b/app/views/user_keys/show_partials/_list_of_comments.html.erb
@@ -2,24 +2,25 @@
 <h3>Comments</h3>
 
 <br/>
-  <% for comment in @comments %>
-    <div>
-      <strong><%= comment.comment_user.andrew_id %></strong>
-      &nbsp;<%= comment.created_at.to_formatted_s(:pretty) %>
-      &nbsp;<%= "(private)" if comment.is_private %>
-      <%= link_to "X", delete_comment_path(id: @user_key.id, comment_id: comment.id),
-          method: :patch, data: { confirm: 'Are you sure you want to delete this comment?'}, class: "small-button" %>
-      <br />
-      <p><%= comment.message %></p>
-    </div>
-  <% end %>
 
-<!--All new comment to be added-->
+<% for comment in @comments %>
+  <fieldset>
+    <strong><%= comment.comment_user.andrew_id %></strong>
+    &nbsp;<%= comment.created_at.to_formatted_s(:pretty) %>
+    &nbsp;<%= "(private)" if comment.is_private %>
+    <%= link_to "X", delete_comment_path(id: @user_key.id, comment_id: comment.id),
+	method: :patch, data: { confirm: 'Are you sure you want to delete this comment?'}, class: "small-button right" %>
+    <br />
+    <p><%= comment.message %></p>
+  </fieldset>
+<% end %>
+
 <%= form_for(@user_key, url: add_comment_path(@user_key)) do |f| %>
   <fieldset>
   	  
   <legend>Add a comment</legend>
 
+  <!--Allow new comment to be added-->
   <%= f.fields_for :comments, @comment do |p| %>
   
     <%= render 'shared/error_messages', object: @user_key %>
