--- a/app/views/user_keys/show.html.erb
+++ b/app/views/user_keys/show.html.erb
@@ -1,5 +1,7 @@
 <h3>User Key</h3>
 
+<%= render 'shared/error_messages', object: @user_key %>
+
 <%= render partial: 'user_keys/show_partials/approval_status' %>
 
 <p>
