--- a/app/views/layouts/_navigation_links.html.erb
+++ b/app/views/layouts/_navigation_links.html.erb
@@ -26,7 +26,7 @@
     </li>
     <% end %>
     <% if logged_in? %> <!--End admin login check, begin basic user login check-->
-      <li><%= link_to "Your API keys", user_own_keys_path %></li>
+      <li><%= link_to "Your API keys", own_user_keys_path %></li>
     <% end %>
   </ul>
 
