--- a/app/views/user_keys/own_user_keys.html.erb
+++ b/app/views/user_keys/own_user_keys.html.erb
@@ -1,7 +1,7 @@
-<h1>Submitted User Keys</h1>
+<h1>Your User Keys</h1>
 
 <div id="user_keys">
-  <%= render partial: 'user_keys/index_partials/index_table', object: @user_keys %>
+  <%= render partial: 'user_keys/own_user_keys_partials/own_user_keys_table', object: @user_keys %>
 </div>
 
 <!-- Kaminari paginate -->
