Change controller to pass in correct user_keys to show partial for users

--- a/app/views/users/show_partials/_list_of_user_keys.html.erb
+++ b/app/views/users/show_partials/_list_of_user_keys.html.erb
@@ -1,7 +1,7 @@
 <p>
-  <b><%= pluralize(@user.user_keys.size, 'User Key') %></b><br />
+  <b><%= pluralize(@user_keys.size, 'User Key') %></b><br />
   <ul>
-    <% for user_key in @user.user_keys %>
+    <% for user_key in @user_keys %>
       <li><%= link_to((user_key.name), user_key_path(user_key)) %></li>
     <% end  %>
   </ul>
