--- a/app/views/user_keys/own_user_keys_partials/_own_user_keys_table.html.erb
+++ b/app/views/user_keys/own_user_keys_partials/_own_user_keys_table.html.erb
@@ -1,23 +1,31 @@
-<table>
-  <thead>
-    <tr>
-      <th>Key Id</th>
-      <th>Submitted</th>
-      <th>Shared with approvers</th>
-      <th>Confirmed</th>
-      <th colspan="3"></th>
-    </tr>
-  </thead>
+<% if @user_keys.empty? %>
+  
+<p>You do not have any existing or pending keys.</p>
 
-  <tbody>
-    <% for user_key in @user_keys %>
+<% else %>
+  
+  <table>
+    <thead>
       <tr>
-	<td><%= link_to user_key.name, user_key %></td>
-	<td><%= user_key.time_submitted.nil? ? "N/A" : user_key.time_submitted.to_formatted_s(:pretty) %></td>
-	<td><%= user_key.time_filtered.nil? ? "N/A" : user_key.time_filtered.to_formatted_s(:pretty) %></td>
-	<td><%= user_key.time_confirmed.nil? ? "N/A" : user_key.time_confirmed.to_formatted_s(:pretty) %></td>
-	<td><%= link_to 'Edit', edit_user_key_path(user_key), class: "small-button" %></td>
+	<th>Key Id</th>
+	<th>Submitted</th>
+	<th>Shared with approvers</th>
+	<th>Confirmed</th>
+	<th colspan="3"></th>
       </tr>
-    <% end %>
-  </tbody>
-</table>
+    </thead>
+  
+    <tbody>
+      <% for user_key in @user_keys %>
+	<tr>
+	  <td><%= link_to user_key.name, user_key %></td>
+	  <td><%= user_key.time_submitted.nil? ? "N/A" : user_key.time_submitted.to_formatted_s(:pretty) %></td>
+	  <td><%= user_key.time_filtered.nil? ? "N/A" : user_key.time_filtered.to_formatted_s(:pretty) %></td>
+	  <td><%= user_key.time_confirmed.nil? ? "N/A" : user_key.time_confirmed.to_formatted_s(:pretty) %></td>
+	  <td><%= link_to 'Edit', edit_user_key_path(user_key), class: "small-button" %></td>
+	</tr>
+      <% end %>
+    </tbody>
+  </table>
+  
+<% end %>
