Replacing 'role == admin' with new is_admin? method

--- a/app/views/user_keys/_form.html.erb
+++ b/app/views/user_keys/_form.html.erb
@@ -1,8 +1,8 @@
 <%= form_for(@user_key) do |f| %>
   <fieldset>
-    
+
   <!-- Explain the text shown to admins as data that was entered by the requester-->
-  <% if @current_user.role == "admin" %>
+  <% if @current_user.is_admin? %>
     <h3>Data entered by requester</h3>
     <p><i>This information was seen and entered by the requester.</i></p>
   <% end %>
@@ -18,7 +18,7 @@
       </ul>
     </div>
   <% end %>
-  
+
     <div class="collapsed_row">
       <div class="three-column">
         <%= f.label :application_text, class: "prefix" %>
@@ -30,47 +30,47 @@
 
   <!-- The key should belong to the current user when first created -->
   <%= f.hidden_field :user_id, value: @current_user.id if @user_key.user.nil? %>
-  
+
 
   <%= render partial: 'user_keys/form_partials/terms' %>
-  
+
   <!-- Agree to sell your soul to Student Activities here -->
   <div class="collapsed_row">
       <%= f.check_box :agree %>
       <%= f.label :agree %>
   </div>
-  
+
   </fieldset>
-  
-    
+
+
   <!-- Only admins can assign filters, and they can do so at any time -->
-  <% if @current_user.role == "admin" %>
+  <% if @current_user.is_admin? %>
     <fieldset>
-    
+
     <h3>Admin only</h3>
-    
+
     <p><i>Set filters and organizations that this key may have access to here.</i></p>
-  
+
     <%= render partial: 'user_keys/form_partials/filters_checkboxes' %>
-    <%= render partial: 'user_keys/form_partials/organizations_checkboxes' %>    
-  
+    <%= render partial: 'user_keys/form_partials/organizations_checkboxes' %>
+
     <div class="collapsed_row">
       <div class="three-column">
         <%= f.label :time_expired, value: "Expiration Date", class: "prefix" %>
       </div>
       <div class="nine-column">
-        <%= f.date_field :time_expired, order: [:month, :day, :year], 
+        <%= f.date_field :time_expired, order: [:month, :day, :year],
                         start_year: Date.today.year, end_year: 2.years.from_now %>
       </div>
     </div>
-      
+
     </fieldset>
   <% end %>
 
   <br/>
-  
+
   <div class="actions">
     <%= f.submit class: "big-button success" %>
   </div>
-  
+
 <% end %>
