Added 8 proposal text fields to user_key

--- a/app/views/user_keys/show.html.erb
+++ b/app/views/user_keys/show.html.erb
@@ -39,7 +39,7 @@
 
 <p>
   <strong>Application text:</strong>
-  <%= @user_key.application_text %>
+  <%= render partial: 'user_keys/show_partials/application_text' %>
 </p>
 
 <p>
