--- a/app/views/user_keys/_form.html.erb
+++ b/app/views/user_keys/_form.html.erb
@@ -7,37 +7,15 @@
     <p><i>This information was entered by the requester.</i></p>
   <% end %>
 
-  <% if @user_key.errors.any? %>
-    <div id="error_explanation">
-      <h2><%= pluralize(@user_key.errors.count, "error") %>:</h2>
-
-      <ul>
-      <% @user_key.errors.full_messages.each do |message| %>
-        <li><%= message %></li>
-      <% end %>
-      </ul>
-    </div>
-  <% end %>
+  <%= render 'shared/error_messages', object: @user_key %>
   
-    <!-- Application text boxes -->
-    <div class="collapsed_row">
-      <div class="three-column">
-        <%= f.label :application_text, class: "prefix" %>
-      </div>
-      <div class="nine-column">
-        <%= f.text_field :application_text %>
-      </div>
-    </div>
+  <!-- Application text boxes. -->
+  <!-- Note that the form object is passed in as :f-->
+  <%= render partial: 'user_keys/form_partials/application_text', locals: {:f=>f} %>
 
   <!-- The key should belong to the current user when first created, handled in controller -->
 
-  <%= render partial: 'user_keys/form_partials/terms' %>
-  
-  <!-- Agree to sell your soul to Student Activities here -->
-  <div class="collapsed_row">
-      <%= f.check_box :agree %>
-      <%= f.label :agree %>
-  </div>
+  <%= render partial: 'user_keys/form_partials/terms', locals: {:f=>f} %>
   
   </fieldset>
   
@@ -73,18 +51,7 @@
         <%= f.check_box :active %>
         <%= f.label :active %>
       </div>
-    
-      <p><i>Optionally provide a reason for inactiving the key.</i></p>
       
-      <div class="collapsed_row"> <!--Expiration date-->
-        <div class="three-column">
-          <%= f.label :reason, class: "prefix" %>
-        </div>
-        <div class="nine-column">
-          <%= f.text_field :reason %>
-        </div>
-      </div>
-        
       <p>Note: marking a key application as <i>inactive</i>
       suspends the application process. Marking a confirmed key as <i>inactive</i>
       suspends all API use of the key.</p>
