--- a/app/views/user_keys/edit.html.erb
+++ b/app/views/user_keys/edit.html.erb
@@ -1,6 +1,3 @@
 <h1>Editing User Key</h1>
 
-<%= render 'form' %>
-
-<%= link_to 'Show', @user_key, class: "big-button" %> |
-<%= link_to 'Back', user_keys_path, class: "big-button secondary" %>
+<%= render partial: 'form', locals: {cancel_url: @user_key} %>
