--- a/app/views/user_keys/show_partials/_list_of_comments.html.erb
+++ b/app/views/user_keys/show_partials/_list_of_comments.html.erb
@@ -1,43 +1,68 @@
-<!--Show existing comments -->
 <fieldset>
-
-<h3>Comments</h3>
-
-<br/>
-
-<% for comment in @comments %>
+  <h3>Administrator Notes to User</h3>
+  
+  <!--Show existing comments -->
+  <% for comment in @public_comments %>
   <fieldset>
-    <strong><%= comment.comment_user.andrew_id %></strong>
+    <strong>Administrator</strong>
     &nbsp;<%= comment.created_at.to_formatted_s(:pretty) %>
-    &nbsp;<%= "(private)" if comment.is_private %>
-    <%= link_to "X", delete_comment_path(id: @user_key.id, comment_id: comment.id),
+    <% if @current_user.role? :admin %>
+      <%= link_to "X", delete_comment_path(id: @user_key.id, comment_id: comment.id),
 	method: :patch, data: { confirm: 'Are you sure you want to delete this comment?'}, class: "small-button right" %>
+    <% end %>
     <br />
     <p><%= comment.message %></p>
   </fieldset>
-<% end %>
-
-<%= form_for(@user_key, url: add_comment_path(@user_key)) do |f| %>
-  <fieldset>
-  	  
-  <legend>Add a comment</legend>
-
-  <!--Allow new comment to be added-->
-  <%= f.fields_for :comments, @comment do |p| %>
-  
-    <div class="row">
-	<%= p.label :message %>
-	<%= p.text_field :message %>
-    </div>
-    
   <% end %>
+</fieldset>
   
-  <div class="actions">
-    <%= f.submit class: "big-button success", value: "Add comment" %>
-  </div>
+<% if @current_user.role? :is_staff %> 
+  <fieldset>
+    <h3>Staff Discussion (Private)</h3>
   
+    <!--Show existing comments -->
+    <% for comment in @private_comments %>
+      <strong><%= comment.comment_user.andrew_id %></strong>
+	&nbsp;<%= comment.created_at.to_formatted_s(:pretty) %>
+	<% if @current_user.role? :admin %>
+	  <%= link_to "X", delete_comment_path(id: @user_key.id, comment_id: comment.id),
+	    method: :patch, data: { confirm: 'Are you sure you want to delete this comment?'}, class: "small-button right" %>
+	<% end %>
+	<br />
+	<p><%= comment.message %></p>
+    <% end %>
   </fieldset>
   
+  <%= form_for(@user_key, url: add_comment_path(@user_key)) do |f| %>
+    <fieldset>
+	    
+    <legend>Add a comment</legend>
+  
+    <!--Allow new comment to be added-->
+    <%= f.fields_for :comments, @comment do |p| %>
+    
+      <div class="row">
+	  <%= p.label :message %>
+	  <%= p.text_field :message %>
+      </div>
+      
+      <!-- Only admin is allowed to make a post visible to the requester-->
+      <% if @current_user.role? :admin %>
+      <div class="row">
+	  <%= p.label "Check here to post this comment as a note to the requester." %>
+	  <%= p.check_box :public %>
+      </div>
+      <% end %>
+      
+    <% end %>
+    
+    <div class="actions">
+      <%= f.submit class: "big-button success", value: "Add comment" %>
+    </div>
+    
+    </fieldset>
+  <!-- End form -->
+  <% end %>
+  
+<!-- End staff-only comment area-->
 <% end %>
-
-</fieldset>
