--- a/app/views/home/_requester_dashboard.html.erb
+++ b/app/views/home/_requester_dashboard.html.erb
@@ -1,11 +1,11 @@
 <div class="panel"> 
 
-<h5> Hi, <%="#{current_user.andrew_id}"%>!  </h5>
+<h4> Hi, <%="#{current_user.andrew_id}"%>!  </h4>
 <br /> 
 
 <button>Apply for a new key<% link_to new_user_key_path %></button>
 
-<p> Your Existing Keys: </p>
+<p> My Existing Keys: </p>
 <% if @confirmed_keys.size > 0 %>
 <table>
   <tr>
@@ -17,7 +17,7 @@
   <tr>
     <td><%= link_to key.name, user_key_path(key) %></td>
     <td><%= key.value %></td>
-    <td><= key.time_expired ? key.time_expired.to_formatted_s(:pretty) : "N/A" %></td>
+    <td><%= key.time_expired ? key.time_expired.to_formatted_s(:pretty) : "N/A" %></td>
   </tr>
 <% end %>
 </table>
@@ -62,7 +62,7 @@ None
 <% end %>
 
 
-<p> Your Expired Keys: </p>
+<p> My Expired Keys: </p>
 <% if @expired_keys.size > 0 %>
 <table>
   <tr>
@@ -72,7 +72,7 @@ None
 <% @expired_keys.each do |key| %>
   <tr>
     <td><%= link_to key.name, user_key_path(key) %></td> 
-    <td><= key.time_expired ? key.time_expired.to_formatted_s(:pretty) : "N/A" %></td>
+    <td><%= key.time_expired ? key.time_expired.to_formatted_s(:pretty) : "N/A" %></td>
   </tr>
 <% end %>
 </table>
